<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_button_nav_beranda"
        android:title="@string/title_beranda" />
    <item
        android:id="@+id/navigation_appointment"
        android:icon="@mipmap/ic_button_nav_riwayat"
        android:title="@string/title_myappointment" />

    <item
        android:id="@+id/navigation_pendaftaran"
        android:title="@string/title_pendaftaran"
        />

    <item
        android:id="@+id/navigation_diagnosis"
        android:icon="@mipmap/ic_button_nav_diagnosis"
        android:title="@string/title_diagnosis" />
    <item
        android:id="@+id/navigation_profil"
        android:icon="@mipmap/ic_button_nav_profil"
        android:title="@string/title_akun" />

</menu>
